--- a/canaa/blog/templates/blog/blog_post.html
+++ b/canaa/blog/templates/blog/blog_post.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block nav_blog %} class="active"{% endblock %}
 
 {% block content %}
 
 	<div class="k-content post">
         <div class="row-fluid">
-            <h3>+Saúde</h3>
+            <h3>{% trans '+Saúde' %}</h3>
         </div>
 
         <div class="row-fluid">
