--- a/canaa/catalog/templates/catalog/catalog_detail.html
+++ b/canaa/catalog/templates/catalog/catalog_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block nav_products %} class="active"{% endblock %}
+{% block nav_product %} class="active"{% endblock %}
 
 {% block content %}
 
