--- a/canaa/talents/templates/talents/talent_detail.html
+++ b/canaa/talents/templates/talents/talent_detail.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="k-content">
         <div class="row-fluid">
-            <h3>Trabalhe Conosco</h3>
+            <h3>Trabalhe Conosco e</h3>
             <img class="k-top" src="{{ STATIC_URL }}img/trabalhe_conosco_canaa.jpg">
         </div>
 
