--- a/canaa/core/templates/base.html
+++ b/canaa/core/templates/base.html
@@ -1,14 +1,14 @@
+<!DOCTYPE html>
 {% load i18n %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="pt-br" class="no-js">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <title>Polpa de Fruta Canaã</title>
+    <title>{% trans 'Polpa de Fruta Canaã' %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="author" content="Jookle">
+    <meta name="author" content="OW7">
 
     <!-- Le styles -->
     <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
@@ -46,9 +46,17 @@
 
     <div style="background-color: #fff; width: 100%; position: fixed; z-index: 999">
         <div class="container pull">
-            <span class="pull-right">
-                <img src="{{ STATIC_URL }}img/flag-br.png" width="16">
-                <img src="{{ STATIC_URL }}img/flag-us.png" width="16">
+            <span class="pull-right language">
+                <form action="{% url 'set_language' %}" method="post" class="no-margin">
+                  {% csrf_token %}
+                  <input type="hidden" name="language" />
+                  {% get_language_info_list for LANGUAGES as languages %}
+                  {% for language in languages %}
+                    <a {% if LANGUAGE_CODE == language.code  %}class="active"{% endif %} href="javascript:;" class="btn-setlang" data-language="{{ language.code }}">
+                        <img src="{{ STATIC_URL }}img/{{ language.code }}_active.png" alt="{{ language.name_local }}" width="16" />
+                    </a>
+                  {% endfor %}
+                </form>
             </span>
         </div>
     </div>
@@ -74,17 +82,17 @@
                       <div class="nav-collapse collapse navbar-responsive-collapse navigation">
                         <ul class="nav pull-right sf-menu">
                             <li {% block nav_institutional %}{% endblock %}>
-                                <a href="{% url 'institutional' %}">Institucional</a></li>
+                                <a href="{% url 'institutional' %}">{% trans 'Institucional' %}</a></li>
                             <li {% block nav_product %}{% endblock %}>
-                                <a href="{% url 'group:group' %}">Produtos</a></li>
+                                <a href="{% url 'group:group' %}">{% trans 'Produtos' %}</a></li>
                             <li {% block nav_representative %}{% endblock %}>
-                                <a href="{% url 'sellers' %}">Vendas</a></li>
+                                <a href="{% url 'sellers' %}">{% trans 'Vendas' %}</a></li>
                             <li {% block nav_talent %}{% endblock %}>
-                                <a href="{% url 'talent' %}">Trabalhe Conosco</a></li>
+                                <a href="{% url 'talent' %}">{% trans 'Trabalhe Conosco' %}</a></li>
                             <li {% block nav_contact %}{% endblock %}>
-                                <a href="{% url 'contact' %}">Contato</a></li>
+                                <a href="{% url 'contact' %}">{% trans 'Contato' %}</a></li>
                             <li {% block nav_blog %}{% endblock %}>
-                                <a href="{% url 'blog:blog' %}">+Saúde</a></li>
+                                <a href="{% url 'blog:blog' %}">{% trans '+Saúde' %}</a></li>
                         </ul>
                       </div><!-- /.nav-collapse -->
 
@@ -128,6 +136,18 @@
     <script src="{{ STATIC_URL }}js/modernizr.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/script.js"></script>
     <script src="{{ STATIC_URL }}owl-carousel/owl.carousel.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $(".btn-setlang").click(function(e) {
+                var form = $(this).parent();
+                form.find("input[name='language']").val(
+                    $(this).attr("data-language")
+                );
+                form.submit();
+            });
+        });
+    </script>
 
     {% block script %}
 
