--- a/canaa/core/templates/contact.html
+++ b/canaa/core/templates/contact.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block nav_contact %} class="active"{% endblock %}
 
 {% block content %}
 
     <div class="k-content">
         <div class="row-fluid">
-            <h3>Contato</h3>
+            <h3>{% trans 'Contato' %}</h3>
             <!-- Map -->
             <div class="contact_map" id="contact_map">
                 <div class="k-top" id="maps"></div>
@@ -15,7 +17,7 @@
             <div class="row-fluid marg30-top">
                 <div class="contact-details">
                     <div class="span4">
-                        <h3>Endereço</h3>
+                        <h3>{% trans 'Endereço' %}</h3>
                         <i class="icons-marker icon-home"></i>
                         <div class="contact-address">
                             {{ enterprise.address }}, {{ enterprise.number }}<br>
@@ -24,7 +26,7 @@
                         </div>
                     </div>
                     <div class="span4">
-                        <h3>Fone</h3>
+                        <h3>{% trans 'Fone' %}</h3>
                         <i class="icons-marker icon-phone"></i>
                         <div>{{ enterprise.phone1 }}</div>
                         {% if enterprise.phone2 %}
@@ -37,7 +39,7 @@
                         {% endif %}
                     </div>
                     <div class="span4">
-                        <h3>E-mail</h3>
+                        <h3>{% trans 'E-mail' %}</h3>
                         <i class="icons-marker icon-envelope"></i>
                         <div><span>{{ enterprise.email }}</span></div>
                     </div>
@@ -45,10 +47,10 @@
             </div>
             <div class="row-fluid marg30-top">
                 <!-- Message -->
-                <h3>Envie uma mensagem</h3>
+                <h3>{% trans 'Envie uma mensagem' %}</h3>
                 <!-- Form -->
                 {% if contact_success %}
-                    <p>Mensagem enviada com sucesso.</p>
+                    <p>{% trans 'Mensagem enviada com sucesso' %}.</p>
                     <a href="{% url 'contact' %}" class="btn btn-blue">Voltar</a>
                     <br><br>
                 {% else %}
@@ -63,7 +65,7 @@
                         <div class="controls">
                         {% csrf_token %}
                         </div>
-                        <button type="submit" class="btn btn-info">Enviar Mensagem</button>
+                        <button type="submit" class="btn btn-info">{% trans 'Enviar Mensagem' %}</button>
                     </form>
                 {% endif %}
             </div>
