--- a/canaa/core/templates/institutional.html
+++ b/canaa/core/templates/institutional.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block nav_institutional %} class="active"{% endblock %}
 
 {% block content %}
 
     <div class="k-content">
         <div class="row-fluid">
-            <h3>Institucional</h3>
+            <h3>{% trans 'Institucional' %}</h3>
             <div class="row-fluid">
                 <div class="span7 right-line">
                     <blockquote>
@@ -21,7 +23,7 @@
             </div>
 
             <div class="row-fluid">
-                <h3 class="pull-right">Nossa Missão</h3>
+                <h3 class="pull-right">{% trans 'Nossa Missão' %}</h3>
             </div>
             <div class="row-fluid">
                 <div class="span5 marg20-btm">
@@ -52,12 +54,12 @@
             </div>
 
             <div class="row-fluid marg20-top marg20-btm">
-                <h3>Clientes</h3>
+                <h3>{% trans 'Clientes' %}</h3>
                 <div id="owl-demo" class="owl-carousel">
                     {% for customer in customers %}
                         <div class="item"><img src="{{ customer.image.url }}" alt="{{ customer.name }}"></div>
                     {% empty %}
-                        <p>Nenhum cliente encontrado.</p>
+                        <p>{% trans 'Nenhum cliente encontrado' %}.</p>
                     {% endfor %}
                 </div>
             </div>
@@ -65,10 +67,7 @@
         </div>
     </div>
 
-
-
 {% endblock content %}
-
 
 {% block script %}
 
