#4615632 - Internacionalizacao do conteudo

--- a/canaa/blog/templates/blog/blog_index.html
+++ b/canaa/blog/templates/blog/blog_index.html
@@ -21,7 +21,8 @@
                     </form>
                 </div>
             </span>
-            <p>{% trans 'No nosso blog vamos contar pra você semanalmente várias dicas sobre frutas e alimentos e como elas podem contribuir para você ter muito mais saúde, acompanhe nossos posts e viva bem melhor' %}!</p>
+            <p>{{ blog.content }}</p>
+            <!-- {% trans 'No nosso blog vamos contar pra você semanalmente várias dicas sobre frutas e alimentos e como elas podem contribuir para você ter muito mais saúde, acompanhe nossos posts e viva bem melhor' %}! -->
 		</div>
 
 		<!-- begin:content -->
