--- a/canaa/talents/templates/talents/talent_detail.html
+++ b/canaa/talents/templates/talents/talent_detail.html
@@ -1,32 +1,41 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block nav_talent %} class="active"{% endblock %}
 
 {% block content %}
     <div class="k-content">
         <div class="row-fluid">
-            <h3>Trabalhe Conosco e</h3>
+            <h3>{% trans 'Trabalhe Conosco' %}</h3>
+            {% for p in page %}
+            <img class="k-top marg20-btm" src="{{ p.image.url }}" width="100%">
+            <p>{{ p.content }}</p>
+            {% endfor %}
+            <!--
+            <h3>Trabalhe Conosco</h3>
             <img class="k-top" src="{{ STATIC_URL }}img/trabalhe_conosco_canaa.jpg">
+            -->
         </div>
 
         <div class="row-fluid marg30-top">
             <div class="contact-details">
                 <div class="span7">
-                    <h3>Envie seu currículo</h3>
-                    <p>Parabéns {{ talent.name }}, seu curriculo foi enviado com sucesso!</p>
-                    <p>Em breve, entraremos em contato pelo
+                    <h3>{% trans 'Envie seu currículo' %}</h3>
+                    <p>{% trans 'Parabéns' %} {{ talent.name }}, {% blocktrans %}seu curriculo foi enviado com sucesso{% endblocktrans %}!</p>
+                    <p>{% blocktrans %}Em breve, entraremos em contato pelo{% endblocktrans %}
                         {% if talent.phone1 %}
-                            fone: {{ talent.phone1 }}
+                            {% trans 'fone' %}: {{ talent.phone1 }}
                         {% else %}
-                            email: {{ talent.email }}
+                            {% trans 'email' %}: {{ talent.email }}
                         {% endif %}.
                     </p>
-                    <p><a class="btn validate btn-primary" href="{% url 'talent' %}">Voltar</a></p>
+                    <p><a class="btn validate btn-primary" href="{% url 'talent' %}">{% trans 'Voltar' %}</a></p>
                     <br>
                 </div>
                 <div class="span1"></div>
                 <div class="span4">
-                    <h3>Contato</h3>
+                    <h3>{% trans 'Contato' %}</h3>
                     <i class="icons-marker icon-home"></i>
                     <div class="contact-address">
                         {{ enterprise.address }}, {{ enterprise.number }}<br>
