--- a/canaa/core/templates/base.html
+++ b/canaa/core/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load i18n %}
 {% load staticfiles %}
+{% load app_filters %}
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
